--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -1,4 +1,4 @@
-name: CMake cross-platform
+name: Windows build
 
 on:
   push:
@@ -7,20 +7,6 @@ on:
     branches: [main]
 
 jobs:
-  build-linux:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          lfs: true
-      - name: Install dependencies
-        run: sudo apt install -y libglew-dev libglfw3-dev cmake
-      - name: Run cmake configure
-        run: cmake -B build -S . -DCMAKE_BUILD_TYPE=Release
-      - name: Build release version
-        run: cmake --build build
-
   build-windows:
     runs-on: windows-2019
 
