create GameApp class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
 add_executable(PongPlusPlus src/main.cpp
                             src/ball.cpp
                             src/board.cpp
+                            src/game_app.cpp
                             src/game_window.cpp
                             src/player.cpp)
 
