add GL3H and GraRen debug library version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,6 @@ elseif(WIN32)
 add_compile_options(/W4 /WX)
 endif(UNIX)
 
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
-
 ###############################################################################
 ## MAIN EXECUTABLE
 ###############################################################################
@@ -25,6 +23,8 @@ add_executable(PongPlusPlus src/main.cpp
                             src/game_window.cpp
                             src/player.cpp)
 
+target_compile_definitions(PongPlusPlus PRIVATE $<$<CONFIG:Debug>:DEBUG>)
+
 target_include_directories(PongPlusPlus PRIVATE vendor include)
 
 if(UNIX)
@@ -33,11 +33,14 @@ target_link_directories(PongPlusPlus
   PRIVATE "${PROJECT_SOURCE_DIR}/lib/linux/GL3H/")
 target_link_libraries(PongPlusPlus -lGraRen -lGL3H -lglfw -lGLEW -lGL)
 elseif(WIN32)
-target_link_libraries(PongPlusPlus 
+target_link_libraries(PongPlusPlus
   ${PROJECT_SOURCE_DIR}/lib/win/GLFW/glfw3dll.lib 
   ${PROJECT_SOURCE_DIR}/lib/win/GLEW/glew32.lib 
-  ${PROJECT_SOURCE_DIR}/lib/win/GraRen/GraRen.lib 
   opengl32.lib)
+
+target_link_libraries(PongPlusPlus
+  optimized ${PROJECT_SOURCE_DIR}/lib/win/GraRen/Release/GraRen.lib
+  debug ${PROJECT_SOURCE_DIR}/lib/win/GraRen/Debug/GraRen.lib)
 
 target_link_options(PongPlusPlus PRIVATE /NODEFAULTLIB:LIBCMT)
 
@@ -49,9 +52,21 @@ add_custom_command(TARGET PongPlusPlus POST_BUILD
     "${PROJECT_SOURCE_DIR}/lib/win/GLFW/glfw3.dll"
     $<TARGET_FILE_DIR:PongPlusPlus>
   COMMAND ${CMAKE_COMMAND} -E copy_if_different
-    "${PROJECT_SOURCE_DIR}/lib/win/GraRen/GraRen.dll"
+    $<IF:$<CONFIG:Debug>,"${PROJECT_SOURCE_DIR}/lib/win/GraRen/Debug/GraRen.dll","${PROJECT_SOURCE_DIR}/lib/win/GraRen/Release/GraRen.dll">
     $<TARGET_FILE_DIR:PongPlusPlus>
   COMMAND ${CMAKE_COMMAND} -E copy_if_different
-    "${PROJECT_SOURCE_DIR}/lib/win/GL3H/GL3H.dll"
+    $<IF:$<CONFIG:Debug>,"${PROJECT_SOURCE_DIR}/lib/win/GL3H/Debug/GL3H.dll","${PROJECT_SOURCE_DIR}/lib/win/GL3H/Release/GL3H.dll">
     $<TARGET_FILE_DIR:PongPlusPlus>)
-endif(UNIX)
+
+set(INCLUDE_PDB $<$CONFIG:Debug>:YES>)
+
+if (INCLUDE_PDB STREQUAL YES)
+  add_custom_command(TARGET PongPlusPlus POST_BUILD 
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+      $<$<CONFIG:Debug>:"${PROJECT_SOURCE_DIR}/lib/win/GraRen/Debug/GraRen.pdb">
+      $<TARGET_FILE_DIR:PongPlusPlus>
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+      $<$<CONFIG:Debug>:"${PROJECT_SOURCE_DIR}/lib/win/GL3H/Debug/GL3H.pdb">
+      $<TARGET_FILE_DIR:PongPlusPlus>)
+  endif(UNIX)
+endif()
